--- a/.github/workflows/Auto.yaml
+++ b/.github/workflows/Auto.yaml
@@ -35,7 +35,7 @@ jobs:
         
       - name: 'Working'
         env:
-          link: ${{secrets.link}} 
+          link: ${{【墨墨背单词】墨墨学员_48369750：邀请你下载并注册墨墨背单词，复制此口令打开墨墨背单词，然后 TA 领奖励🎉 a:/IVT2¥L631AAN¥}} 
         run: |
           python -m pip install --upgrade pip
           python -m pip install pytz requests datetime
